--- a/templates/components/clock.hbs
+++ b/templates/components/clock.hbs
@@ -1,5 +1,7 @@
+{{eLog "Clock Context" this}}
+
 <div class="clock-container">
-  <div class="clock"
+  <div id="{{id}}" class="clock"
     data-id="{{id}}"
     data-name="{{name}}"
     data-index="{{index}}"
@@ -12,7 +14,10 @@
     {{~#if targetKey}} data-target-key="{{targetKey}}"{{/if}}
     {{~#if targetFlagKey}} data-target-flag-key="{{targetFlagKey}}"{{/if}}
     data-is-highlighted="{{isHighlighted}}"
-    data-is-name-visible="{{isNameVisible}}" >
+    data-is-name-visible="{{isNameVisible}}"
+    data-is-showing-controls="{{isShowingControls}}">
+
+    {{!-- {{#if (test isVisible "||" isGM)}} --}}
 
     <!-- Frame -->
     {{#unless (test value "==" max)}}
@@ -56,6 +61,175 @@
     {{#if isNameVisible}}
     <label class="clock-label">{{name}}</label>
     {{/if}}
+
+    {{!-- Controls:
+
+      Name: Input<text>
+      Color: Select
+      Max: Select
+      IsVisible: Toggle
+      IsHighlighted: Toggle
+      IsNameVisible: Toggle
+
+    --}}
+    {{#if isGM}}
+    <div class="clock-controls {{~#unless isShowingControls}} controls-hidden{{/unless}}">
+      <div class="clock-controls-row toggle-controls-row">
+        {{#if targetFlagKey}}
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isShowingControls
+          activeClass="fas fa-eye"
+          activeTooltip="<b>Controls are Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-eye-slash"
+          inactiveTooltip="<b>Controls are Hidden.</b><br>Click to display."
+          targetID=targetID
+          dataAction="clock-toggle"
+          targetFlagKey=(concat targetFlagKey "." id ".isShowingControls") }}
+        {{else}}
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isShowingControls
+          activeClass="fas fa-eye"
+          activeTooltip="<b>Controls are Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-eye-slash"
+          inactiveTooltip="<b>Controls are Hidden.</b><br>Click to display."
+          targetID=targetID
+          dataAction="clock-toggle"
+          targetKey=(concat targetKey "." id ".isShowingControls") }}
+        {{/if}}
+      </div>
+      {{#if isShowingControls}}
+      <div class="clock-controls-row name-row">
+        <input type="text" class="clock-controls-name" {{~#if targetFlagKey}} data-target-flag-key="{{targetFlagKey}}.{{id}}.name"{{else}} name="{{targetKey}}.{{id}}.name"{{/if}} value="{{name}}" />
+      </div>
+      <div class="clock-controls-row select-row">
+        {{#if targetFlagKey}}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-color-select"
+          dataAction="gm-select"
+          dataFlagTarget=(concat targetFlagKey "." id ".color")
+          dataDType="String"
+          targetID=targetID
+          selected=color
+          options=colorSelectOptions
+        }}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-value-select"
+          dataAction="gm-select"
+          dataFlagTarget=(concat targetFlagKey "." id ".value")
+          dataDType="String"
+          targetID=targetID
+          selected=value
+          options=valueSelectOptions
+        }}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-max-select"
+          dataAction="gm-select"
+          dataFlagTarget=(concat targetFlagKey "." id ".max")
+          dataDType="String"
+          targetID=targetID
+          selected=max
+          options=maxSelectOptions
+        }}
+        {{else}}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-color-select"
+          dataAction="gm-select"
+          dataTarget=(concat targetKey "." id ".color")
+          dataDType="String"
+          targetID=targetID
+          selected=color
+          options=colorSelectOptions
+        }}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-value-select"
+          dataAction="gm-select"
+          dataTarget=(concat targetKey "." id ".value")
+          dataDType="String"
+          targetID=targetID
+          selected=value
+          options=valueSelectOptions
+        }}
+        {{> "systems/eunos-blades/templates/components/select.hbs"
+          cssClass="clock-select clock-max-select"
+          dataAction="gm-select"
+          dataTarget=(concat targetKey "." id ".max")
+          dataDType="String"
+          targetID=targetID
+          selected=max
+          options=maxSelectOptions
+        }}
+        {{/if}}
+      </div>
+      <div class="clock-controls-row button-row">
+        {{#if targetFlagKey}}
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isVisible
+          activeClass="fas fa-eye"
+          targetID=targetID
+          activeTooltip="<b>Clock is Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-eye-slash"
+          inactiveTooltip="<b>Clock is Hidden.</b><br>Click to display."
+          targetFlagKey=(concat targetFlagKey "." id ".isVisible") }}
+
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isHighlighted
+          activeClass="fas fa-circle"
+          targetID=targetID
+          activeTooltip="<b>Clock is Highlighted.</b><br>Click to fade."
+          inactiveClass="fas fa-circle-slash"
+          inactiveTooltip="<b>Clock is Not Highlighted.</b><br>Click to highlight."
+          targetFlagKey=(concat targetFlagKey "." id ".isHighlighted") }}
+
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isNameVisible
+          activeClass="fas fa-comment"
+          targetID=targetID
+          activeTooltip="<b>Name is Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-comment-slash"
+          inactiveTooltip="<b>Name is Hidden.</b><br>Click to display."
+          targetFlagKey=(concat targetFlagKey "." id ".isNameVisible") }}
+        {{else}}
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isVisible
+          activeClass="fas fa-eye"
+          targetID=targetID
+          activeTooltip="<b>Clock is Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-eye-slash"
+          inactiveTooltip="<b>Clock is Hidden.</b><br>Click to display."
+          targetKey=(concat targetKey "." id ".isVisible") }}
+
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isHighlighted
+          activeClass="fas fa-circle"
+          targetID=targetID
+          activeTooltip="<b>Clock is Highlighted.</b><br>Click to fade."
+          inactiveClass="fas fa-circle-slash"
+          inactiveTooltip="<b>Clock is Not Highlighted.</b><br>Click to highlight."
+          targetKey=(concat targetKey "." id ".isHighlighted") }}
+
+        {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
+          cssClass="clock-toggle"
+          isToggled=isNameVisible
+          activeClass="fas fa-comment"
+          targetID=targetID
+          activeTooltip="<b>Name is Visible.</b><br>Click to hide."
+          inactiveClass="fas fa-comment-slash"
+          inactiveTooltip="<b>Name is Hidden.</b><br>Click to display."
+          targetKey=(concat targetKey "." id ".isNameVisible") }}
+        {{/if}}
+      </div>
+      {{/if}}
+    </div>
+    {{/if}}
+
+    {{!-- {{/if}} --}}
 
   </div>
 </div>
