--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -47,33 +47,32 @@
                     activeTooltip="<b>Key is Visible</b><br>Click to Hide"
                     inactiveClass="fas fa-eye-slash"
                     inactiveTooltip="<b>Key is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isVisible") }}
+                    targetKey=(concat "system.clocksData.keys." keyID ".isVisible") }}
                   {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                     isToggled=keyData.isActive
                     activeClass="fas fa-bell"
                     activeTooltip="<b>Key is Focused</b><br>Click to Mute"
                     inactiveClass="fas fa-bell-slash"
                     inactiveTooltip="<b>Key is Muted</b><br>Click to Focus"
-                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isActive") }}
+                    targetKey=(concat "system.clocksData.keys." keyID ".isActive") }}
                   {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                     isToggled=keyData.isNameVisible
                     activeClass="fas fa-comment"
                     activeTooltip="<b>Name is Visible</b><br>Click to Hide"
                     inactiveClass="fas fa-comment-slash"
                     inactiveTooltip="<b>Name is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isNameVisible") }}
+                    targetKey=(concat "system.clocksData.keys." keyID ".isNameVisible") }}
                 </th>
                 <th class="black-white">
                   <input type="text" class="key-input key-input-display" name="system.clock_keys.{{keyID}}.name" value="{{keyData.name}}">
                 </th>
                 <th class="black-white">
-                  <select class="key-clock-counter" data-dtype="number" data-id="{{keyID}}" name="system.clock_keys.{{keyID}}.size">
-                    {{#select keyData.size}}
-                    {{#for 1 6}}
-                    <option value="{{this}}">{{this}}</option>
-                    {{/for}}
-                    {{/select}}
-                  </select>
+                  {{> "systems/eunos-blades/templates/components/button-icon.hbs"
+                    buttonClass="fas fa-plus"
+                    tooltip="<b>Add Clock</b>"
+                    action="add-clock"
+                    targetId=keyID
+                  }}
                 </th>
                 <th class="black-white">
                   {{> "systems/eunos-blades/templates/components/button-icon.hbs"
@@ -87,7 +86,8 @@
 
               {{#each keyData.clocksData as |clockData clockID|}}
               {{> "systems/eunos-blades/templates/parts/clock-sheet-row.hbs" clockData
-                targetKeyPrefix=(concat "system.scenes." ../../system.targetScene "." ../keyID ".clocksData." clockID)
+                keyID=../keyID
+                targetKeyPrefix=(concat "system.clocksData.keys." ../keyID ".clocksData." clockID)
               }}
               {{/each}}
             </tr>
